fixed z-indexes in overlay / button

--- a/sass/_overrides.scss
+++ b/sass/_overrides.scss
@@ -292,7 +292,7 @@ $elmHeight: 36px;
     }
 
     .btn {
-      z-index: 2;
+      z-index: 1;
       width: auto;
       position: absolute;
       top: 0;
@@ -348,7 +348,7 @@ $elmHeight: 36px;
     width: 100%;
     max-height: 0;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     left: 0;
     top: 0;
     overflow: auto;
@@ -460,7 +460,7 @@ $elmHeight: 36px;
     }
 
     .btn {
-      z-index: 2;
+      z-index: 1;
       width: auto;
       position: absolute;
       top: 0;
